# llm-term

./: .gitignore  .pre-commit-config.yaml  .releaserc.js  404.html  README.md  index.html  llmcli.py  mkdocs.yaml  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml  publish.yaml  release.yaml  tests.yaml
cli/: index.html
contributing/: index.html
docs/: cli.md  index.md
llm_term/: __about__.py  __init__.py  __main__.py  about.py  base.py  cli.py  utils.py
llmcli/: __init__.py  __main__.py  about.py  base.py  cli.py  utils.py
search/: search_index.json
tests/: conftest.py  test_cli.py
